k8s/apps/default/sonarr/main/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  hostnames:
    - sonarr-old.cbannister.xyz
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: sonarr-main
          port: 80
